-fixed a few visual bugs and inconsistencies

--- a/src/views/ViewProducts.form
+++ b/src/views/ViewProducts.form
@@ -172,7 +172,7 @@
     </Container>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Product Type"/>
+        <Property name="text" type="java.lang.String" value="Categories"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
