--- a/src/views/ViewBasket.form
+++ b/src/views/ViewBasket.form
@@ -81,7 +81,7 @@
   <SubComponents>
     <Component class="javax.swing.JButton" name="cmdBack">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Back"/>
+        <Property name="text" type="java.lang.String" value="Add more products"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmdBackActionPerformed"/>
